src/test/ui/parser/keyword-typeof.stderr
error: expected identifier, found reserved keyword `typeof`
  --> $DIR/keyword-typeof.rs:2:9
   |
LL |     let typeof = ();
   |         ^^^^^^ expected identifier, found reserved keyword
   |
help: escape `typeof` to use it as an identifier
   |
LL |     let r#typeof = ();
   |         ++

error: aborting due to previous error

